// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with both arrows 1`] = `
<div
  className="followup-timeline-box followup-timeline-box-collapsible collapsed"
  id="contribution-1"
>
  <ArrowButton
    direction="inward"
    disabled={false}
    label="1"
    onTouchTap={[Function]}
  />
  <div>
    Element
  </div>
  <ArrowButton
    direction="outward"
    disabled={false}
    label="1"
    onTouchTap={[Function]}
  />
  <div
    className="followup-timeline-box-toggle"
    id="contribution-1-toggle"
  >
    <RaisedButton
      disabled={false}
      id="contribution-1-button"
      label="Show more"
      onTouchTap={[Function]}
    />
  </div>
</div>
`;

exports[`rendering renders correctly with left arrow 1`] = `
<div
  className="followup-timeline-box followup-timeline-box-collapsible collapsed"
  id="contribution-1"
>
  <ArrowButton
    direction="inward"
    disabled={false}
    label="1"
    onTouchTap={[Function]}
  />
  <div>
    Element
  </div>
  <div
    className="followup-timeline-box-toggle"
    id="contribution-1-toggle"
  >
    <RaisedButton
      disabled={false}
      id="contribution-1-button"
      label="Show more"
      onTouchTap={[Function]}
    />
  </div>
</div>
`;

exports[`rendering renders correctly with right arrow 1`] = `
<div
  className="followup-timeline-box followup-timeline-box-collapsible collapsed"
  id="contribution-1"
>
  <div>
    Element
  </div>
  <ArrowButton
    direction="outward"
    disabled={false}
    label="1"
    onTouchTap={[Function]}
  />
  <div
    className="followup-timeline-box-toggle"
    id="contribution-1-toggle"
  >
    <RaisedButton
      disabled={false}
      id="contribution-1-button"
      label="Show more"
      onTouchTap={[Function]}
    />
  </div>
</div>
`;

exports[`rendering renders correctly without arrows 1`] = `
<div
  className="followup-timeline-box followup-timeline-box-collapsible collapsed"
  id="contribution-1"
>
  <div>
    Element
  </div>
  <div
    className="followup-timeline-box-toggle"
    id="contribution-1-toggle"
  >
    <RaisedButton
      disabled={false}
      id="contribution-1-button"
      label="Show more"
      onTouchTap={[Function]}
    />
  </div>
</div>
`;
